@@ -198,7 +198,7 @@ shared by
 should be of sex feminine
 should be of sex masculine
 son/daughter/child
-sources
+source/sources
 specify
 spouse
 spouses not included
